--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
     
 
-<title>Manish Chander| Profile</title>
+<title>Nandhini| Profile</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 
@@ -152,10 +152,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="header" id="head1">
 		<div class="container" >
 			 <div class="banner-info" style="padding-top:50px;padding-bottom:10px">
-				 <h2>MANISH CHANDER</h2>
+				 <h2>Nandhini Arivuselvam</h2>
 				<h3 style="color:rgba(255, 255, 255, 0.59);">Emerging FullStack Developer/Analyst</h3>
-				 <p>I would like to utilize my skills and abilities in an environment, thereby providing meaningful 
-				contribution to the organization development and simultaneously self development
+				 <p>To work in an environment which encourages me to succeed and hleps me to enhance my professional skills and knowledge appropriately.
 </p>
 				 <a href="#about" class='scroll'>Know More About Me</a>
 			 </div>
@@ -192,7 +191,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="col-md-3 skills-grid text-center">
 						<div class="c100 p70 big green">
- 						 <span><img src='icons/download.jpg' style="z-index:999; height:100px; width:100px; "></span>
+ 						 <span><img src='icons/javaicon.png' style="z-index:999; height:100px; width:100px; "></span>
   						<div class="slice">
     						<div class="bar"></div>
     						<div class="fill"></div>
@@ -226,9 +225,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   						</div>
 						</div>
 					</div>
-					<div class="col-md-3 skills-grid text-center">
+					<!-- <div class="col-md-3 skills-grid text-center">
 						<div class="c100 p70 big orange">
- 						 <span><img src='icons/javaicon.png' style="z-index:999; height:100px; width:100px; "></span>
+ 						 <span><img src='icons/' style="z-index:999; height:100px; width:100px; "></span>
   						<div class="slice">
     						<div class="bar"></div>
     						<div class="fill"></div>
@@ -244,6 +243,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   						</div>
 						</div>
 					</div>
+-->
 					<div class="clearfix"> </div>
 				 
 		</div>
