--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container" >
 			 <div class="banner-info" style="padding-top:50px;padding-bottom:10px">
 				 <h2>Nandhini Arivuselvam</h2>
-				<h3 style="color:rgba(255, 255, 255, 0.59);">Emerging FullStack Developer/Analyst</h3>
+				<h3 style="color:rgba(255, 255, 255, 0.59);">INTERN @ Cognizant</h3>
 				 <p>To work in an environment which encourages me to succeed and hleps me to enhance my professional skills and knowledge appropriately.
 </p>
 				 <a href="#about" class='scroll'>Know More About Me</a>
